// Message for RPC.
message RpcMessageProto
{
    required int32 Id = 1;
    required int32 Flag = 2;
    required string OperationName = 3;
    required string Error = 4;
    repeated bytes SerializedData = 5;
}

// EventArgs can be used in RPC communication.
message EventArgsProto
{
    required int32 dummy = 1;
}

// Message for ChannelWrapper/ChannelUnwrapper
message WrappedDataProto
{
    required string AddedData = 1;
    optional bytes OriginalDataBin = 2;
    optional string OriginalDataStr = 3;
}

// Message for Broker.
message BrokerMessageProto
{
    required string Request = 1;
    repeated string MessageTypes = 2;
    optional bytes MessageBin = 3;
    optional string MessageStr = 4;
}

// Reliable messaging.
message ReliableMessageProto
{
    required string MessageType = 1;
    required string MessageId = 2;
    optional bytes MessageBin = 3;
    optional string MessageStr = 4;
}

// Monitored messaging.
message MonitorChannelMessageProto
{
    required string MessageType = 1;
    optional bytes MessageContentBin = 2;
    optional string MessageContentStr = 3;
}

// Empty message
message VoidMessageProto
{
    required int32 dummy = 1;
}